[package]
name = "hangman"
version = "0.1.0"
authors = ["Arnie09 <arnabchanda964@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde_json = "1.0.49"
serde_derive = "1.0.105"
serde = "1.0.105"